--- a/front-end/nestracking/src/app/destination/destination.component.html
+++ b/front-end/nestracking/src/app/destination/destination.component.html
@@ -1,1 +1,178 @@
-<p>Destination works!</p>
+<div class="searchBarContainer">
+    <!-- BARRE DE RECHERCHE -->
+    <div class="searchBar">
+        <!-- LE GRID -->
+        <div class="gridContainer">
+            <!-- LA VILLE -->
+            <div class="item1Country">
+                <label for="country"></label>
+                <input type="text" name="country" placeholder="Pays">
+            </div>
+
+            <!-- DATE DEPART -->
+            <div class="item3DateGo">
+                <button>Date de départ</button>
+            </div>
+            <!-- DATE DE RETOUR -->
+            <div class="item4DateBack">
+                <button>Date de retour</button>
+            </div>
+            <!-- NOMBRE DE PERSONNE-->
+            <div class="item2Number">
+                <label for="number"></label>
+                <input type="text" name="number" placeholder="Nombres de personnes">
+            </div>
+            <!-- BOUTON SUBMIT -->
+            <div class="item5SubmitBtn">
+                <button>SUBMIT</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!-- MAIN:  -->
+<div class="destinationContainer">
+
+    <!-- THEMES: -->
+    <div class="themeTitle">
+        <h1>Destination</h1>
+    </div>
+    <!-- BOX -->
+    <div class="themesFlexBox">
+        <!-- <div class="themesFlexBox1"> -->
+        <!-- THEME 1 -->
+        <div class="theme1">
+            <img src="http://placeimg.com/192/108/any" alt="">
+
+        </div>
+    </div>
+    <!-- DIV PAGE-->
+    <div class="bigGrid">
+
+
+
+
+
+        <!-- APD -->
+        <div class="apd">
+            <h3>APD</h3>
+        </div>
+
+        <!-- RISTOURNE -->
+        <div class="pourcent">
+            <h3>-20%</h3>
+        </div>
+
+        <!-- BOUTON RESERVER -->
+        <div class="btnBook">
+            <button>Book This!</button>
+        </div>
+
+
+    </div>
+
+    <!--BARRE NAVIGATION-->
+
+    <div class="navbarContainer">
+        <ul class="navbar">
+
+            <li class="menuItem"><a href="résumé">Résumé</a></li>
+            <li class="menuItem"><a href="#descriptif">Déscriptif</a></li>
+            <li class="menuItem"><a href="#localisation">Localisation</a></li>
+            <li class="menuItem"><a href="#avis">Avis</a></li>
+
+        </ul>
+    </div>
+
+
+
+
+
+
+
+    <!--résumé fond blanc-->
+    <div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et hic voluptatum eos, incidunt explicabo cumque
+            officia ut repellat fugit ullam quisquam reiciendis eligendi quos laudantium minima voluptatibus natus iste
+            fugiat.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et hic voluptatum eos, incidunt explicabo cumque
+            officia ut repellat fugit ullam quisquam reiciendis eligendi quos laudantium minima voluptatibus natus iste
+            fugiat.
+        </p>
+    </div>
+
+    <!--bloc gris détails-->
+    <div class="details">
+
+
+        <!-- première partie en gras-->
+        <p class="important">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis obcaecati, ipsam
+            nobis ea dicta
+            ratione est
+            eaque quod eius aspernatur, corrupti rerum iste officia deserunt velit, repellat atque ipsum at?Lorem
+            ipsum
+            dolor sit amet consectetur adipisicing elit. Facere veritatis reprehenderit itaque quam tenetur, modi
+            beatae
+            consectetur atque, ipsa cupiditate architecto hic dolor illum accusantium odio assumenda fugiat.
+            Commodi,
+            maiores?Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quam velit consequuntur!
+            Corrupti, sed
+            veniam quae neque sapiente nihil non vel rerum, natus, labore laborum excepturi! Exercitationem
+            aspernatur
+            porro. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas reiciendis nisi libero, ad
+            officiis
+            nemo doloribus quasi quaerat accusantium, consequuntur asperiores dolores perferendis excepturi
+            deserunt nulla
+            ab atque inventore facere!</p>
+
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis obcaecati, ipsam nobis ea dicta ratione
+            est
+            eaque quod eius aspernatur, corrupti rerum iste officia deserunt velit, repellat atque ipsum at?Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Facere veritatis reprehenderit itaque quam tenetur, modi
+            beatae
+            consectetur atque, ipsa cupiditate architecto hic dolor illum accusantium odio assumenda fugiat. Commodi,
+            maiores?Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quam velit consequuntur! Corrupti,
+            sed
+            veniam quae neque sapiente nihil non vel rerum, natus, labore laborum excepturi! Exercitationem aspernatur
+            porro. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas reiciendis nisi libero, ad
+            officiis
+            nemo doloribus quasi quaerat accusantium, consequuntur asperiores dolores perferendis excepturi deserunt
+            nulla
+            ab atque inventore facere!</p>
+
+
+
+
+    </div>
+
+    <!--CARTE-->
+
+    <div class="card"></div>
+
+    <!--COMMENTAIRES-->
+    <div class="postComment">
+
+        <form action="" method="post">
+              <div>
+                    <label for="nom">Nom :</label>
+                    <input type="text" id="nom" name="user_name">
+                  </div>
+
+              <div>
+                    <label for="courriel">Courriel :</label>
+                    <input type="email" id="courriel" name="user_email">
+                  </div>
+
+              <div>
+                    <label for="message">Message :</label>
+                    <textarea id="message" name="user_message"></textarea>
+                  </div>
+             
+              <div class="push">
+                    <button type="submit">Envoyer le message</button>
+                  </div>
+        </form>
+    </div>
+</div>
