--- a/front-end/nestracking/src/app/index/index.component.html
+++ b/front-end/nestracking/src/app/index/index.component.html
@@ -6,27 +6,27 @@
       <!-- LA VILLE -->
       <div class="item1Country">
         <label for="country"></label>
-        <input type="text" name='country' placeholder="Pays">
+        <input type="text" name='country'placeholder="Pays">
       </div>
-
+      
       <!-- DATE DEPART -->
       <div class="item3DateGo">
         <button>Date de départ</button>
       </div>
       <!-- DATE DE RETOUR -->
       <div class="item4DateBack">
-        <button>Date de retour</button>
+        <button >Date de retour</button>
       </div>
       <!-- NOMBRE DE PERSONNE-->
       <div class="item2Number">
         <label for="number"></label>
-        <input type="text" name='number' placeholder="Nombres de personnes">
+        <input type="text" name='number'placeholder="Nombres de personnes">
       </div>
       <!-- BOUTON SUBMIT -->
       <div class="item5SubmitBtn">
-        <button>SUBMIT</button>
+        <button >SUBMIT</button>
       </div>
-
+  
     </div>
   </div>
 </div>
@@ -41,68 +41,32 @@
   <!-- BOX -->
   <div class="themesFlexBox">
     <!-- <div class="themesFlexBox1"> -->
-    <!-- THEME 1 -->
-    <div class="theme1">
-      <img src="http://placeimg.com/192/108/any" alt="">
-      <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
-      <h3>Title</h3>
-    </div>
-<<<<<<< HEAD
-    <!-- THEME 2 -->
-    <div class="theme2">
-      <img src="http://placeimg.com/192/108/any" alt="">
-      <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
-      <h3>Title</h3>
-    </div>
+      <!-- THEME 1 -->
+      <div class="theme1">
+
+        <img src="{{themes.summer.image}}" alt="" width="192" height="108" (click)="GoToHotel(themes.summer.id)" >
+        <h3>Summer</h3>
+      </div>
+      <!-- THEME 2 -->
+      <div class="theme2">
+        <img src="{{themes.love.image}}" alt="" width="192" height="108" (click)="GoToHotel(themes.love.id)">
+        <h3>Love</h3>
+      </div>
     <!-- </div> -->
 
     <!-- <div class="themesFlexBox2"> -->
-    <!-- THEME 3 -->
-    <div class="theme3">
-      <img src="http://placeimg.com/192/108/any" alt="">
-      <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
-      <h3>Title</h3>
-=======
-    <!-- BOX -->
-    <div class="themesFlexBox">
-      <!-- <div class="themesFlexBox1"> -->
-        <!-- THEME 1 -->
-        <div class="theme1">
-  
-          <img src="{{themes.summer.image}}" alt="" (click)="GoToHotel(themes.summer.id)" >
-          <h3>Summer</h3>
-        </div>
-        <!-- THEME 2 -->
-        <div class="theme2">
-          <img src="{{themes.love.image}}" alt=""  (click)="GoToHotel(themes.love.id)">
-          <h3>Love</h3>
-        </div>
-      <!-- </div> -->
-
-      <!-- <div class="themesFlexBox2"> -->
-        <!-- THEME 3 -->
-        <div class="theme3">
-          <img src="{{themes.history.image}}" alt=""  (click)="GoToHotel(themes.history.id)">
-          <h3>History</h3>
-        </div>
-        <!-- THEME 4 -->
-        <div class="theme4">
-          <img src="{{themes.last.image}}" alt=""  (click)="GoToHotel(themes.last.id)">
-          <h3>Last</h3>
-        </div>
-      <!-- </div> -->
-      
->>>>>>> 763ffcf3194525eb3ba20a85ca494eb519de549e
-    </div>
-    <!-- THEME 4 -->
-    <div class="theme4">
-      <img src="http://placeimg.com/192/108/any" alt="">
-      <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
-      <h3>Title</h3>
-    </div>
-<<<<<<< HEAD
+      <!-- THEME 3 -->
+      <div class="theme3">
+        <img src="{{themes.history.image}}" alt="" width="192" height="108" (click)="GoToHotel(themes.history.id)">
+        <h3>History</h3>
+      </div>
+      <!-- THEME 4 -->
+      <div class="theme4">
+        <img src="{{themes.last.image}}" alt="" width="192" height="108" (click)="GoToHotel(themes.last.id)">
+        <h3>Last</h3>
+      </div>
     <!-- </div> -->
-
+    
   </div>
 
   <!-- DESTINATIONS DU MOMENT  -->
@@ -112,27 +76,14 @@
   <div class="bestPlacesFlexBox">
     <!-- + RESERVÉE -->
     <div class="mostReserve">
-      <img src="http://placeimg.com/256/144/any" alt="">
-      <h3>Les plus réservées</h3>
-=======
-    <div class="bestPlacesFlexBox">
-      <!-- + RESERVÉE -->
-      <div class="mostReserve">
-          
-          <img src="{{moments.Views.image}}" alt=""  (click)="GoToHotel(moments.Views.id)">
-          <h3>Les plus réservées</h3>
-      </div>
-      <!-- + VUES -->
-      <div class="mostViews">
-        <img src="{{moments.Sell.image}}" alt=""  (click)="GoToHotel(moments.Sell.id)">
-          <h3>Les plus vues</h3>
-      </div>
->>>>>>> 763ffcf3194525eb3ba20a85ca494eb519de549e
+        
+        <img src="{{moments.Views.image}}" alt="" width="256" height="144" (click)="GoToHotel(moments.Views.id)">
+        <h3>Les plus réservées</h3>
     </div>
     <!-- + VUES -->
     <div class="mostViews">
-      <img src="http://placeimg.com/256/144/any" alt="">
-      <h3>Les plus vues</h3>
+      <img src="{{moments.Sell.image}}" alt="" width="256" height="144" (click)="GoToHotel(moments.Sell.id)">
+        <h3>Les plus vues</h3>
     </div>
   </div>
 </div>
