add correction gilles

--- a/front-end/nestracking/src/app/index/index.component.html
+++ b/front-end/nestracking/src/app/index/index.component.html
@@ -44,12 +44,12 @@
       <!-- THEME 1 -->
       <div class="theme1">
 
-        <img src="{{themes.summer.image}}" alt="" width="192" height="108" (click)="GoToHotel(themes.summer.id)" >
+        <img src="{{themes.summer.image}}" alt=""  (click)="GoToHotel(themes.summer.id)" >
         <h3>Summer</h3>
       </div>
       <!-- THEME 2 -->
       <div class="theme2">
-        <img src="{{themes.love.image}}" alt="" width="192" height="108" (click)="GoToHotel(themes.love.id)">
+        <img src="{{themes.love.image}}" alt=""  (click)="GoToHotel(themes.love.id)">
         <h3>Love</h3>
       </div>
     <!-- </div> -->
@@ -57,12 +57,12 @@
     <!-- <div class="themesFlexBox2"> -->
       <!-- THEME 3 -->
       <div class="theme3">
-        <img src="{{themes.history.image}}" alt="" width="192" height="108" (click)="GoToHotel(themes.history.id)">
+        <img src="{{themes.history.image}}" alt=""  (click)="GoToHotel(themes.history.id)">
         <h3>History</h3>
       </div>
       <!-- THEME 4 -->
       <div class="theme4">
-        <img src="{{themes.last.image}}" alt="" width="192" height="108" (click)="GoToHotel(themes.last.id)">
+        <img src="{{themes.last.image}}" alt=""  (click)="GoToHotel(themes.last.id)">
         <h3>Last</h3>
       </div>
     <!-- </div> -->
@@ -77,12 +77,12 @@
     <!-- + RESERVÉE -->
     <div class="mostReserve">
         
-        <img src="{{moments.Views.image}}" alt="" width="256" height="144" (click)="GoToHotel(moments.Views.id)">
+        <img src="{{moments.Views.image}}" alt="" (click)="GoToHotel(moments.Views.id)">
         <h3>Les plus réservées</h3>
     </div>
     <!-- + VUES -->
     <div class="mostViews">
-      <img src="{{moments.Sell.image}}" alt="" width="256" height="144" (click)="GoToHotel(moments.Sell.id)">
+      <img src="{{moments.Sell.image}}" alt="" (click)="GoToHotel(moments.Sell.id)">
         <h3>Les plus vues</h3>
     </div>
   </div>
