--- a/front-end/nestracking/src/app/footer/footer.component.html
+++ b/front-end/nestracking/src/app/footer/footer.component.html
@@ -69,7 +69,7 @@
     </ul>
   </div>
   <div class="icons">
-    <a href="https://www.facebook.com/" target="_blank">
+    <a href="https://www.facebook.com/Nestracking/" target="_blank">
       <img class="logo" src="../../assets/public/images/033-facebook-1.png" alt="Facebook">
     </a>
     <a href="https://twitter.com/" target="_blank">
