--- a/front-end/nestracking/src/app/footer/footer.component.scss
+++ b/front-end/nestracking/src/app/footer/footer.component.scss
@@ -17,6 +17,7 @@
     }
     .menu-horiz{
         visibility: hidden;
+        height: 1px;
     }
 };
 .newsletter{
@@ -61,6 +62,7 @@ padding:1rem;
     .footer{
     .menu-horiz{
         visibility: visible;
+        height: auto;
         ul{
             display: flex;
             justify-content: center;
@@ -105,6 +107,7 @@ padding:1rem;
     .footer{
         .menu-horiz{
             visibility: visible;
+            height: auto;
             ul{
                 display: flex;
                 justify-content: center;
