--- a/front-end/nestracking/src/app/destination/destination.component.html
+++ b/front-end/nestracking/src/app/destination/destination.component.html
@@ -75,9 +75,9 @@
     <!--BARRE NAVIGATION-->
 
     <div class="navbarContainer">
-        <ul class="navbar">
+        <ul class="topnav">
 
-            <li class="menuItem"><a href="résumé">Résumé</a></li>
+            <li class="menuItem"><a class="active" href="#home">Résumé</a></li>
             <li class="menuItem"><a href="#descriptif">Déscriptif</a></li>
             <li class="menuItem"><a href="#localisation">Localisation</a></li>
             <li class="menuItem"><a href="#avis">Avis</a></li>
@@ -151,7 +151,7 @@
 
     <div class="card"></div>
 
-    <!--COMMENTAIRES-->
+    <!--COMMENTAIRES
     <div class="postComment">
 
         <form action="" method="post">
@@ -173,6 +173,6 @@
               <div class="push">
                     <button type="submit">Envoyer le message</button>
                   </div>
-        </form>
-    </div>
+        </form> 
+</div>-->
 </div>
