--- a/front-end/nestracking/src/app/destination/destination.component.scss
+++ b/front-end/nestracking/src/app/destination/destination.component.scss
@@ -30,6 +30,7 @@
     .item1Country,.item2Number{
         grid-column: 1 span;
         grid-row: 1; //se trouve sur la première ligne
+        margin-top: 16px;
         input{
             width:98%;
         }
@@ -65,6 +66,9 @@ img{width: 90%;
     max-width: 920px;
 
 }
+p {
+    padding: 1em;
+}
 
 
 .details{
@@ -80,6 +84,7 @@ img{width: 90%;
     display:grid;
     grid-template-columns: 1fr 1fr;//2colonnes
     grid-template-rows: 1fr 1fr ;//2lignes
+    margin: 1em;
     
     
     background-color:  #E7B460;
@@ -118,6 +123,8 @@ img{width: 90%;
     margin-right: auto;
     text-align: center; 
     button{
+        margin-top: 2em;
+        margin-bottom: 2em;
     font-style: italic;
     width: 50%;
     height: 75%;
@@ -134,17 +141,16 @@ form {
     border-radius: 1em;
   }
   
-  div + div {
+/*   div + div {
     margin-top: 1em;
-  }
+  } */
   
-  label {
-    /* Afin de s'assurer que toutes les étiquettes aient la même dimension et soient alignées correctement */
+  /* label {
+    Afin de s'assurer que toutes les étiquettes aient la même dimension et soient alignées correctement
     display: inline-block;
     width: 90px;
     text-align: right;
-  }
-  
+  }*/
   .postComment{input, textarea {
     /* Afin de s'assurer que tous les champs textuels utilisent la même police
        Par défaut, textarea utilise une police à espacement constant */
@@ -187,3 +193,36 @@ form {
        que celui entre les étiquettes et les champs textuels */
     margin-left: .5em;
   }}
+
+
+
+
+  ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #41B3AF;
+}
+
+ul.topnav li {float: left;}
+
+ul.topnav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {background-color: #41B3AF;}
+
+ul.topnav li a.active {background-color: rgb(253, 253, 253);
+color:black}
+
+ul.topnav li.right {float: right;}
+
+@media screen and (max-width: 600px){
+    ul.topnav li.right, 
+    ul.topnav li {float: none;}
+}
