--- a/front-end/nestracking/src/app/searchpage/searchpage.component.scss
+++ b/front-end/nestracking/src/app/searchpage/searchpage.component.scss
@@ -20,20 +20,20 @@ background-color: white;
 background-color:white;
 }
 #Tri{
-width: 90%;
+width: 100% !important;
 margin-top: 10px;
-margin-left: auto;
-margin-right: auto;
+//margin-left: auto;
+//margin-right: auto;
 height: 80px;
 background-color: #3ab3b0;
-border-radius: 50px 50px 0px 0px;
+border-radius: 35px 35px 0px 0px;
 display: flex;
 
 flex-direction: column;
 justify-content: center;
 align-content: center;
 align-items:center;
-font-size: 35px;
+font-size: 12px;
 }
 
 #Tri p{
@@ -48,17 +48,17 @@ justify-content: space-between;
 margin-top: 20px;
 margin-bottom: 20px;
 width: 90%;
-margin-left: auto;
-margin-right: auto;    
+//margin-left: auto;
+//margin-right: auto;    
 }
 
 #Filter{
-width: 30%;
+width: 35%;
 background-color: grey;
-height: 950px;
+height: 1500px;
 display: grid;
-padding: 2%;
-grid-template-columns: 40% 55%;
+//padding: 2%;
+//grid-template-columns: 40% 55%;
 grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px;
 align-items:center;
 }
@@ -80,17 +80,18 @@ height: fit-content;
 .TriOption{
     cursor: pointer;
     float:left;
-    width: 200px;
+    width: auto;
     height: 50px;  
-    color: white;
+    color: rgb(250, 250, 250);
 }
 
 
 .ArrowSelect{
-width: 35px;
-height:35px;
+width: 15px;
+height:15px;
 margin-top: 0%;
-margin-left: 10px;
+margin-left: 5px;
+margin-right: 20px;
 align-self: center;
 }
 
@@ -100,8 +101,8 @@ color:#ffcc66;
 
 .Star{
     display: inline-block;
-width: 25px;
-height: 25px;
+width: 15px;
+height: 15px;
 background-image: url('../../assets/public/images/EmptyStar.png');
 background-size: contain;
 margin-right: 10px;
@@ -116,7 +117,9 @@ width: 92%;
 padding: 4%; 
 background-color: lightblue;
 display: flex;
-justify-content: space-around;
+//justify-content: space-around;
+flex-direction: column;
+width:200px;
 margin-bottom: 25px;
 }
 
@@ -146,4 +149,16 @@ padding: 0px;
 .OneHotelText p{
     font-size:16px;
     font-family: Calibri;
+}
+
+@media only screen and (min-width: 641px){
+    .OneHotel{
+        flex-direction: initial;
+        justify-content: space-around;
+        //width:auto; 
+    }
+}
+
+@media only screen and (min-width: 1024px){
+
 }
