--- a/front-end/nestracking/src/app/destination/destination.component.html
+++ b/front-end/nestracking/src/app/destination/destination.component.html
@@ -93,7 +93,8 @@
 
     <!--résumé fond blanc-->
     <div>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et hic voluptatum eos, incidunt explicabo cumque
+        <p class="first">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et hic voluptatum eos, incidunt
+            explicabo cumque
             officia ut repellat fugit ullam quisquam reiciendis eligendi quos laudantium minima voluptatibus natus iste
             fugiat.
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et hic voluptatum eos, incidunt explicabo cumque
@@ -127,7 +128,8 @@
             ab atque inventore facere!</p>
 
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis obcaecati, ipsam nobis ea dicta ratione
+        <p class="suite">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis obcaecati, ipsam nobis ea
+            dicta ratione
             est
             eaque quod eius aspernatur, corrupti rerum iste officia deserunt velit, repellat atque ipsum at?Lorem ipsum
             dolor sit amet consectetur adipisicing elit. Facere veritatis reprehenderit itaque quam tenetur, modi
