flo add inscription link

--- a/front-end/nestracking/src/app/header/header.component.html
+++ b/front-end/nestracking/src/app/header/header.component.html
@@ -11,7 +11,7 @@
 <!-- CONTIENT LE LOGO LOGIN ET MENU -->
     <div class="menuContent">
       <!-- LOGIN LOGO -->
-      <a class="loginLink" [routerLink]="['/index']" 
+      <a class="loginLink" [routerLink]="['/inscription']" 
         routerLinkActive="active">
         <img class="imgLogin" src="../../assets/public/images/login.icon.svg"  alt="">
       </a>
