flo add header login

--- a/front-end/nestracking/src/app/header/header.component.html
+++ b/front-end/nestracking/src/app/header/header.component.html
@@ -43,13 +43,15 @@
           <li><a [routerLink]="['/contact']" 
              routerLinkActive="active">
              Contact</a></li>
-          
           <li><a [routerLink]="['/searchpage']" 
             routerLinkActive="active">
             Recherche</a></li>
           <li><a [routerLink]="['/index']" 
             routerLinkActive="active">
             Accueil</a></li>
+          <li><a [routerLink]="['/index']" 
+            routerLinkActive="active">
+            Logout</a></li>
            
         </ul>
       </div>
