update arnaud to flo

--- a/front-end/nestracking/src/app/header/header.component.html
+++ b/front-end/nestracking/src/app/header/header.component.html
@@ -49,9 +49,7 @@
           <li><a [routerLink]="['/index']" 
             routerLinkActive="active">
             Accueil</a></li>
-          <li><a [routerLink]="['/index']" 
-            routerLinkActive="active">
-            Logout</a></li>
+          <li><a>{{isConnect}}</a></li>
            
         </ul>
       </div>
