--- a/front-end/nestracking/src/app/header/header.component.html
+++ b/front-end/nestracking/src/app/header/header.component.html
@@ -49,7 +49,9 @@
           <li><a [routerLink]="['/index']" 
             routerLinkActive="active">
             Accueil</a></li>
-          <li><a>{{isConnect}}</a></li>
+          <li><a [routerLink]="['/login']" routerLinkActive="active" *ngIf="!this.jwtService.isLoggedIn()">login</a> </li>
+            
+          <li><a href="#" (click)='onLogout($event)' *ngIf="this.jwtService.isLoggedIn()">logout</a> </li>
            
         </ul>
       </div>
