--- a/front-end/nestracking/src/styles.scss
+++ b/front-end/nestracking/src/styles.scss
@@ -13,3 +13,8 @@ body { margin: 0; font-family: 'Roboto', sans-serif; }
     max-width: 1440px;
     margin:1em auto;
 }
+.mat-form-field-infix{
+    border-top: 0 solid transparent!important;
+    margin:0;
+    }
+  
