--- a/front-end/nestracking/src/app/searchbar/searchbar.component.html
+++ b/front-end/nestracking/src/app/searchbar/searchbar.component.html
@@ -1,12 +1,18 @@
 <div class="searchBarContainer">
   <!-- BARRE DE RECHERCHE -->
+  
   <div class="searchBar">
+    <form #f="ngForm" (ngSubmit)="onSubmit(f.value)">
     <!-- LE GRID -->
     <div class="gridContainer">
       <!-- LA VILLE -->
       <div class="item1Country">
-        <label for="country"></label>
-        <input type="text" name='country'placeholder="Pays">
+          <label for="country"></label>
+          <input type="text" 
+                matInput 
+                placeholder=" Pays" 
+                name='country' 
+                ngModel>
       </div>
       
       <!-- DATE DEPART -->
@@ -14,7 +20,7 @@
         <!-- <button>Date de départ</button> -->
         <mat-form-field class="OneFilter">
           <input matInput [matDatepicker]="picker" placeholder="Departure Date"
-                 (dateInput)="addEvent('input', $event)" (dateChange)="Date('Start', $event)">
+                 (dateInput)="addEvent('input', $event)" (dateChange)="Date('Start', $event)" >
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
@@ -23,7 +29,7 @@
       <div class="item4DateBack">
         <mat-form-field class="OneFilter">
           <input matInput [matDatepicker]="Return" placeholder="End"
-                 (dateInput)="addEvent('input', $event)" (dateChange)="Date('End', $event)">
+                 (dateInput)="addEvent('input', $event)" (dateChange)="Date('End', $event)" >
           <mat-datepicker-toggle matSuffix [for]="Return"></mat-datepicker-toggle>
           <mat-datepicker #Return></mat-datepicker>
         </mat-form-field>
@@ -32,7 +38,7 @@
       <!-- NOMBRE DE PERSONNE-->
       <div class="item2Number">
         <label for="number"></label>
-        <input type="text" name='number'placeholder="Nombres de personnes">
+        <input matInput type="text" name='number'placeholder="Nombres de personnes" ngModel>
       </div>
       <!-- BOUTON SUBMIT -->
       <div class="item5SubmitBtn">
@@ -40,5 +46,6 @@
       </div>
   
     </div>
+  </form>
   </div>
 </div>
