--- a/front-end/nestracking/src/styles.scss
+++ b/front-end/nestracking/src/styles.scss
@@ -17,4 +17,6 @@ body { margin: 0; font-family: 'Roboto', sans-serif; }
     border-top: 0 solid transparent!important;
     margin:0;
     }
-  
+.mat-input-element.mat-form-field-autofill-control{
+    background-color: white;
+}
